[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dolphin2mintpy"
version = "0.1.0"
description = "Bridge between Dolphin InSAR processor and MintPy time-series analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Burak Can Kara" },
]
keywords = [
    "InSAR",
    "Dolphin",
    "MintPy",
    "interferometry",
    "geodesy",
    "SAR",
    "time-series",
    "phase-linking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
dolphin2mintpy = "dolphin2mintpy.cli:main"

[project.urls]
Homepage = "https://github.com/bcankara/Dolphin2MintPy"
Repository = "https://github.com/bcankara/Dolphin2MintPy"
Issues = "https://github.com/bcankara/Dolphin2MintPy/issues"
Documentation = "https://github.com/bcankara/Dolphin2MintPy#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/dolphin2mintpy"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
